--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 @layer base {
@@ -94,4 +94,11 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+#kbar-listbox {
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
